--- a/style.css
+++ b/style.css
@@ -326,3 +326,14 @@ iframe {
   margin-right: auto;
   padding: 10px;
 }
+
+#startquiz {
+  width: 50px;
+  height: 50px;
+  border: none;
+  padding: 0px;
+  margin: 5px;
+  background-color: #e1e1e1;
+  /* border-radius: 50%; */
+  cursor: pointer;
+}
